@@ -4,17 +4,20 @@ import com.google.inject.AbstractModule;
 import com.google.inject.Guice;
 import com.google.inject.Inject;
 import com.google.inject.Injector;
+import commons.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import server.database.EventRepository;
-import commons.*;
 import server.services.EventService;
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class EventControllerTest {
     @Inject
@@ -23,6 +26,8 @@ class EventControllerTest {
     private EventController controller;
     @Inject
     private EventService service;
+    @Mock
+    private SimpMessagingTemplate msgs;
     private Event event;
     private List<Debt> debtList = new ArrayList<>();
     private List<Participant> userList = new ArrayList<>();
@@ -31,17 +36,21 @@ class EventControllerTest {
 
     @BeforeEach
     void setup(){
+        MockitoAnnotations.openMocks(this);
+
         Injector injector = Guice.createInjector(new TestModule());
         injector.injectMembers(this);
         event = new Event("title");
-        Participant user1 = new Participant("Ultimo","mm.@gmail.com", "English", null);
+        Participant user1 = new Participant("Ultimo","mm.@gmail.com",
+                "English", null);
         userList.add(user1);
-        Participant user2 = new Participant("Geertson","mm.@gmail.com",  "bank", "Dutch");
+        Participant user2 = new Participant("Geertson","mm.@gmail.com",
+                "bank", "Dutch");
         userList.add(user2);
         Debt debt1 = new Debt( user1, user2, 20.0);
         Debt debt2 = new Debt(user2, user1, 10.0);
-        Expense expense1 = new Expense(user1, 20.0, userList, "name", date, new Tag ("food", "red"));
-
+        Expense expense1 = new Expense(user1, 20.0, userList, "name", date,
+                new Tag ("food", "red"));
     }
 
     @Test
@@ -74,7 +83,7 @@ class EventControllerTest {
         event.setTitle("title2");
         controller.updateEvent(event.getEventId(), event);
         List<Event> eventList2 = controller.getAll();
-        Event check = eventList2.getFirst();
+        Event check = eventList2.get(0);
         assertEquals("title2", check.getTitle());
     }
 
@@ -84,8 +93,7 @@ class EventControllerTest {
             bind(EventRepository.class).to(TestEventRepository.class);
             bind(EventService.class);
             bind(EventController.class);
+            bind(SimpMessagingTemplate.class).toInstance(msgs);
         }
     }
-
-
 }
